# synecta_test

./: CMakeLists.txt  GraphWidget.cpp  GraphWidget.h  Main.qml  Measurement.h  PerformanceUtils.h  README.md  S11Parser.cpp  S11Parser.h  backend.cpp  backend.h  graphrenderer.cpp  graphrenderer.h  main.cpp
src/: Backend.cpp  Backend.h  GraphWidget.cpp  GraphWidget.h  Measurement.h  S11Parser.cpp  S11Parser.h  main.cpp
